crates/turborepo-integration-tests/tests/snapshots/run_root_turbo__no_turbo_json_fails.snap
---
source: crates/turborepo-integration-tests/tests/run_root_turbo.rs
expression: redact_output(&result.combined_output())
---
  x Could not find turbo.json or turbo.jsonc.
  | Follow directions at https://turborepo.com/docs to create one.
