crates/turborepo-integration-tests/tests/snapshots/run_root_turbo__root_turbo_json_flag.snap
---
source: crates/turborepo-integration-tests/tests/run_root_turbo.rs
expression: redact_output(&result.combined_output())
---
• Packages in scope: my-app
• Running build in 1 packages
• Remote caching disabled
my-app:build: cache miss, executing [HASH]
my-app:build: 
my-app:build: > build
my-app:build: > echo building
my-app:build: 
my-app:build: building

 Tasks:    1 successful, 1 total
Cached:    0 cached, 1 total
  Time: [TIME] 

 WARNING  no output files found for task my-app#build. Please check your `outputs` key in `turbo.json`
